// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Can show HTML text  1`] = `
<div
  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
  id="page1.para1"
  style={{}}
>
  <h1>
    Hello
  </h1>
  <br />
  <b>
    where
  </b>
   are you?
</div>
`;

exports[`Can show HTML text with embedded styles 1`] = `
<div
  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
  id="page1.para1"
  style={{}}
>
  <style
    dangerouslySetInnerHTML={
      {
        "__html": "h1 {color: blue} ",
      }
    }
  />
  <h1>
    Hello
  </h1>
  <br />
  <b>
    who
  </b>
   are you?
</div>
`;

exports[`Can show HTML text with values in a template string 1`] = `
<div
  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
  id="page1.para1"
  style={{}}
>
  <h2>
    Hello
  </h2>
  <em>
    Number 42
  </em>
</div>
`;

exports[`Can show html text with child elements and placeholders 1`] = `
<div
  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
  id="page1.para1"
  style={{}}
>
  <article>
    Hi this is 
    <span>
      <div
        className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
        id="page1.para1.Comp1"
        style={{}}
      >
        This is Comp 1
      </div>
    </span>
     without Comp2@ and @Comp3
  </article>
  <span
    aria-hidden={true}
    className="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-1n5qiej-MuiIcon-root"
    id="page1.para1.Comp2"
  >
    some_icon
  </span>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-disableElevation css-1xp33i0-MuiButtonBase-root-MuiButton-root"
    disabled={false}
    id="page1.para1.Comp3"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    Button Comp 3
  </button>
</div>
`;

exports[`Can show plain text with child elements and placeholders 1`] = `
<div
  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
  id="page1.para1"
  style={{}}
>
  Hi this is 
  <div
    className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
    id="page1.para1.Comp1"
    style={{}}
  >
    This is Comp 1
  </div>
   with 
  <span
    aria-hidden={true}
    className="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-1n5qiej-MuiIcon-root"
    id="page1.para1.Comp2"
  >
    some_icon
  </span>
   but not Comp3
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-disableElevation css-1xp33i0-MuiButtonBase-root-MuiButton-root"
    disabled={false}
    id="page1.para1.Comp3"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    Button Comp 3
  </button>
</div>
`;

exports[`Does not show HTML text if allowHtml is false 1`] = `
<div
  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
  id="page1.para1"
  style={{}}
>
  &lt;h1&gt;Hello&lt;/h1&gt;
  <br />
  <br />
  &lt;b&gt;where&lt;/b&gt; are you?
</div>
`;

exports[`Sanitises bad tags in HTML text 1`] = `
<div
  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
  id="page1.para1"
  style={{}}
>
  <h1>
    Hello
  </h1>
  <br />
</div>
`;

exports[`Sanitises incorrect HTML text 1`] = `
<div
  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
  id="page1.para1"
  style={{}}
>
  <h1>
    Hello
  </h1>
  <br />
</div>
`;

exports[`TextElement adds line break for newlines even if allowHtml is none 1`] = `
<div
  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
  id="page1.para1"
  style={{}}
>
  Hello
  <br />
  where 
  <br />
  <br />
  <br />
  are you
  <br />
  <br />
  today?
</div>
`;

exports[`TextElement element DOES NOT produce output containing ReactElement children 1`] = `
<div
  className="MuiTypography-root MuiTypography-body1 css-1qa7v9y-MuiTypography-root"
  id="page1.para1"
  style={{}}
>
  [object Object]
</div>
`;

exports[`TextElement element produces display: none output with show false 1`] = `
<div
  className="MuiTypography-root MuiTypography-body1 css-1ylwpvp-MuiTypography-root"
  id="page1.para1"
  style={{}}
>
  Hello where are you
</div>
`;

exports[`TextElement element produces normal output with show true 1`] = `
<div
  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
  id="page1.para1"
  style={{}}
>
  Hello where are you
</div>
`;

exports[`TextElement element produces output containing ErrorResult message 1`] = `
<div
  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
  id="page1.para1"
  style={{}}
>
  It went wrong
</div>
`;

exports[`TextElement element produces output containing empty children 1`] = `
<div
  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
  id="page1.para1"
  style={{}}
/>
`;

exports[`TextElement element produces output containing null for ErrorResult 1`] = `
<div
  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
  id="page1.para1"
  style={{}}
/>
`;

exports[`TextElement element produces output containing string children 1`] = `
<div
  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
  id="page1.para1"
  style={{}}
>
  Hello where are you
</div>
`;

exports[`TextElement element produces output containing string version of function children 1`] = `
<div
  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
  id="page1.para1"
  style={{}}
>
  function Sum
</div>
`;

exports[`TextElement element produces output containing string version of object children 1`] = `
<div
  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
  id="page1.para1"
  style={{}}
>
  {a: 10, c: 'Hi'}
</div>
`;

exports[`TextElement element produces output containing toString of class object 1`] = `
<div
  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
  id="page1.para1"
  style={{}}
>
  This is a MyClass
</div>
`;

exports[`TextElement element produces output containing valueOf object 1`] = `
<div
  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
  id="page1.para1"
  style={{}}
>
  where are you
</div>
`;

exports[`TextElement gets property values supplied as state objects 1`] = `
<div
  className="MuiTypography-root MuiTypography-body1 css-1ntffwy-MuiTypography-root"
  id="page1.para1"
  style={{}}
>
  Hello
</div>
`;
